# spool

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TODO.md  install.sh
.githooks/: pre-commit
.github/workflows/: ci.yml  deploy.yml  preview.yml
crates/spool-adapters/: Cargo.toml
crates/spool-adapters/src/: claude_code.rs  codex.rs  lib.rs
crates/spool-cli/: Cargo.toml
crates/spool-cli/src/: main.rs
crates/spool-cli/src/commands/: agent.rs  browse.rs  cache.rs  detect.rs  export.rs  info.rs  list.rs  mod.rs  play.rs  publish.rs  search.rs  skill.rs  validate.rs  view.rs
crates/spool-cli/src/commands/browse/: mod.rs  ui.rs
crates/spool-cli/src/tui/: common.rs  editor.rs  library.rs  mod.rs
crates/spool-cli/tests/: cli_smoke.rs  view_multibyte.rs
crates/spool-cli/tests/fixtures/: multibyte.spool
crates/spool-format/: Cargo.toml
crates/spool-format/src/: entry.rs  error.rs  file.rs  lib.rs  redaction.rs  validation.rs
docs/: CLI.md  DESIGN.md  POWER_GRID_GUIDE.md  ROADMAP.md  UNSPOOL_ARCHITECTURE.md
scripts/: setup-hooks.sh
service/: .env.example  index.ts  package-lock.json  package.json  schema.sql  tsconfig.json  wrangler.toml
skills/: spool.md
spec/: SPEC.md
spec/examples/: long-session-trimmed.spool  minimal.spool  refactoring-session.spool  simple-session.spool
spec/schema/: annotation.json  entry.json  error.json  prompt.json  redaction_marker.json  response.json  session.json  subagent_end.json  subagent_start.json  thinking.json  tool_call.json  tool_result.json
web/viewer/: package-lock.json  package.json
web/viewer/src/: app.css  app.html
web/viewer/src/lib/: api.ts  parser.ts  player.svelte.ts  redaction.ts  spool-export.ts  types.ts
web/viewer/src/lib/adapters/: claude-code.ts  codex.ts
web/viewer/src/lib/components/: EditorView.svelte  Entry.svelte  PlayerView.svelte  Timeline.svelte
web/viewer/src/lib/components/entries/: AnnotationBadge.svelte  ErrorEntry.svelte  PromptEntry.svelte  ResponseEntry.svelte  SubagentEntry.svelte  ThinkingEntry.svelte  ToolCallEntry.svelte  ToolResultEntry.svelte
web/viewer/src/routes/: +page.svelte  +page.ts
web/viewer/src/routes/explore/: +page.svelte  +page.ts
web/viewer/src/routes/s/[id]/: +layout.ts  +page.svelte  +page.ts
web/viewer/static/: debugging-demo.spool
