[workspace]
resolver = "2"
members = [
    "crates/spool-format",
    "crates/spool-adapters", 
    "crates/spool-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/asbjornb/spool"
keywords = ["ai", "agent", "session", "replay", "debugging"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.4", features = ["derive"] }

# TUI
ratatui = "0.28"
crossterm = "0.28"

# Async
tokio = { version = "1.35", features = ["full"] }

# Utilities
uuid = { version = "1.6", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
regex = "1.10"
dirs = "5.0"
glob = "0.3"
schemars = { version = "0.8", features = ["chrono", "uuid1"] }

# Testing
pretty_assertions = "1.4"
assert_cmd = "2.0"
