[package]
name = "spool-cli"
description = "CLI tool for browsing, replaying, and sharing AI agent sessions"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "spool"
path = "src/main.rs"

[dependencies]
spool-format = { path = "../spool-format" }
spool-adapters = { path = "../spool-adapters" }

# CLI
clap = { workspace = true }

# TUI
ratatui = { workspace = true }
crossterm = { workspace = true }

# Async
tokio = { workspace = true }

# Utilities
anyhow = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
